--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -153,3 +153,9 @@ svg {
     padding: 0 unit((10/@fs), em);
     text-decoration: none;
 }
+
+
+a:focus {
+    outline: 1px solid var(--primary);
+    outline-offset: 2px;
+}
