standard, simple footer

--- a/src/routes/styles.less
+++ b/src/routes/styles.less
@@ -1,4 +1,5 @@
 @import url('../styles/mixins.less');
 @import url('../styles/global.less');
 @import url('../styles/navigation.less');
+@import url('../styles/footer.less');
 @import url('../styles/pages.less');
