--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -152,6 +152,10 @@
                         color: var(--secondary);
                     }
                 }
+
+                &--active &-link {
+                    color: var(--secondary);
+                }
             }
         }
     }
