--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -154,6 +154,26 @@ svg {
     text-decoration: none;
 }
 
+.skiplink {
+    line-height: 2;
+    font-size: 12px;
+    color: #fff;
+    padding: 0.5em 1em;
+    background-color: #000;
+    .show;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    z-index: 3333;
+    transition: transform 0.33s ease-in-out;
+    transform: translate(0, -100%);
+    text-decoration: none;
+
+    &:focus {
+        transform: translate(0, 0%);
+    }
+}
 
 a:focus {
     outline: 1px solid var(--primary);
