dynamica routings for cms test

--- a/src/styles/navigation.less
+++ b/src/styles/navigation.less
@@ -8,7 +8,8 @@
     padding: unit((20/20), em) 0;
     top: 0;
     left: 0;
-    position: fixed;
+    // position: fixed;
+    position: relative;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
     @media only screen and (min-width:1024px) {
