--- a/src/styles/navigation.less
+++ b/src/styles/navigation.less
@@ -8,8 +8,8 @@
     padding: unit((20/20), em) 0;
     top: 0;
     left: 0;
-    // position: fixed;
-    position: relative;
+    position: fixed;
+    // position: relative;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
     @media only screen and (min-width:1024px) {
@@ -66,12 +66,21 @@
             transform: translate(100%, 0);
             visibility: hidden;
             opacity: 0;
-            width: 50vw;
+            width: 100%;
+            height: calc(100vh - 4.75em);
+            overflow: auto;
             text-align: left;
-            background-color: var(--secondary);
             transition: transform .33s ease,
                 visibility .33s ease,
                 opacity .33s ease;
+            background-color: rgba(0, 0, 0, 0.8);
+
+            .main-header__nav-list--level-1 {
+                width: 50vw;
+                background-color: var(--secondary);
+                margin-left: auto;
+                min-height: 100%;
+            }
 
             &--active {
                 transform: translate(0, 0);
@@ -82,6 +91,23 @@
 
         @media only screen and (max-width:665px) {
             width: 100vw;
+
+            .main-header__nav-list--level-1 {
+                width: 80vw;
+            }
+        }
+
+        &-backdrop {
+            .overlay;
+            border: none;
+            padding: 0;
+            margin: 0;
+            background-color: fade(#000, 50%);
+            z-index: -1;
+
+            @media only screen and (min-width:1024px) {
+                .hide;
+            }
         }
 
         &-list {
